fixed overflowing testimonyt section and footer image

--- a/css/base.css
+++ b/css/base.css
@@ -145,6 +145,9 @@ a {
     width: 90%;
     margin: 0 auto;
   }
+  .contact-us {
+    margin-top: 20rem;
+  }
 }
 
 .boxes {
